Feat/router response (#12)
* overflight fixes

* remove router imports

* data structure

* docs
